<resources>
    <string name="app_name">THD Foody</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus
        consequatur deleniti, deserunt dolore, hic iusto molestiae nihil odit repellendus
        tempora tempore ullam voluptatibus. Cupiditate enim nesciunt officiis repellat voluptate?
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus
        consequatur deleniti, deserunt dolore, hic iusto molestiae nihil odit repellendus
        tempora tempore ullam voluptatibus. Cupiditate enim nesciunt officiis repellat voluptate?</string>
    <!--<string name="danh">Cảm ơn bạn đã mua sắm tại AVShop với mã đơn hàng <span color="#FF9800">392690725</span></string>-->
    <string name="title_activity_maps">Map</string>

    <!--Infor com.danhtran12797.thd.foodyapp.App-->
    <string name="name_app_dialog">Tên: <b>THD Foody</b></string>
    <string name="version_app">Phiên bản: <b>2.0</b></string>
    <string name="func_app">Tính năng: <b>Bán đồ ăn vặt, giao hàng tận nơi</b></string>
    <string name="criteria_app">Tiêu chí: <b>Khách hàng là trên hết</b></string>
    <string name="developer_by">Thực hiện bởi: <a href="https://www.facebook.com/danhtran12797"><b>danhtran12797</b></a> </string>
    <string name="privacy_policy"><a href="https://thd-foody-1.flycricket.io/privacy.html"><b>Điều khoản dịch vụ</b></a> </string>
    <string name="contact_me_app">Email: <b>danhtran12797@gmail.com</b></string>
    <string name="icon"><p>&#127829;&#127828;&#127866;</p></string>
    <string name="icon1"><p>&#128073;&#128073;&#128073;</p></string>

    <string name="link_privacy_policy">Bằng việc đăng ký, bạn đồng ý với <a href="https://thd-foody-1.flycricket.io/privacy.html"><b color='#FF9800'>Điều khoản dịch vụ</b></a> của THD Foody</string>

    <string name="facebook_app_id">2198627943763541</string>
    <string name="fb_login_protocol_scheme">fb2198627943763541</string>
    <string name="loginFacebookButton">Facebook</string>

    <string name="snack_bar_text">Bạn vừa xóa %s khỏi giỏ hàng</string>
    <string name="email_user"><i>%s</i></string>

    <string-array name="name_hot_search">
        <item>trà sữa</item>
        <item>sinh tố</item>
        <item>xôi</item>
        <item>nước mía</item>
        <item>bánh tráng</item>
        <item>bánh mì</item>
        <item>cá viên chiên</item>
        <item>bánh xe</item>
        <item>cơm chay</item>
        <item>chân gà</item>
    </string-array>

    <string-array name="frist_number_phone">
        <item>086</item>
        <item>096</item>
        <item>097</item>
        <item>098</item>
        <item>032</item>
        <item>033</item>
        <item>034</item>
        <item>035</item>
        <item>036</item>
        <item>037</item>
        <item>038</item>
        <item>039</item>
        <item>088</item>
        <item>091</item>
        <item>094</item>
        <item>083</item>
        <item>084</item>
        <item>085</item>
        <item>081</item>
        <item>083</item>
        <item>082</item>
        <item>089</item>
        <item>090</item>
        <item>093</item>
        <item>070</item>
        <item>079</item>
        <item>077</item>
        <item>076</item>
        <item>078</item>
        <item>092</item>
        <item>056</item>
        <item>058</item>
        <item>099</item>
        <item>059</item>
    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel_foody</string>
    <string name="fcm_message" translatable="false">Hello tao test push notificaton</string>
    <string name="default_notification_channel_name" translatable="true">Foody</string>

    <string name="set_email"><u>Thiết lập email</u></string>
    <string name="notifi_verified_email">Email chưa được <u>xác thực</u></string>

    <!--    Momo-->
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>

    <string name="merchantName">THD Foody</string>
    <string name="merchantCode">MOMO407L20200225</string>
    <string name="storeId">store12797</string>
    <string name="storeName">THD Foody</string>
    <string name="description">Thanh toán đơn hàng THD Foody</string>
    <string name="secretKey">GsmuRyX2fDKYwlXTDN2nXYeGTu4yqhP5</string>
    <string name="publicKey">MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAuHo1TyhhHUJ8h/nCGaOCimpKNakEkktYu7Zl6THYAuDKFT3Ay63W5Io786A
        /jBWgZ0lEu1qR33Vzm2AqVWhQaTksoGO27CbQYmlk7+ViYjsDUKLIL4LgfShLConTNoj6YhTVZsEyEqTCxf6e1x+HoAYxhX2XUtCAWOE8x1mLlb8CgY5tU9hfN6S
        XXGwoD2P1ksXSynWL2JreEe33r6DFaJUvvpiDKGAw+lCwWfz36V9DrzOEdQFTbuJGk5j9ua9UHIvuqHRTAZWgtECTR93kFKu0KE3e9xg7ILTTuMUkTjQDGovTDlW
        rAofDAiGeUvBCpglFfsM5cZKU8kxB3BcsEla8GmX+dCi2lyqeLxRfrlikLgHwvzvP6gEFFr+FwAnaGvHveEPy+NZXn2nIPfMxfAthjhZH7r2H+wfmrTKvumiUdqR
        9anSoRQuscA9886T6/qMOvU0TdEd030whgcMmewmjYz9FHM1/7FaJQM+IRzAJw6QP9/P/d4/Bnr5Z+bXJ6htm4VjY7t6Go4dTM0zcSNr2o8PziMqGt5P9p9thjgV
        2mocPKJRSkSJ1naxeNJAzGc6fuAjA6sbQzP8UK+OlHo/jsW4Jk2bg3usY5NHX3MkvYqunnuQvTA4iu1vng3bGFt9AtjcZtsgp6EUy3fZH1mPuv6gjb+tOKrhG+qH
        5hvsCAwEAAQ==</string>

    <string name="verified_email"><u>Xác thực</u></string>
    <string name="send_mail">Email %s đã được gửi đến địa chỉ %s. Hãy kiểm tra email và làm theo hướng dẫn.</string>

    <string name="appID">3013396688480131025</string>

</resources>
